--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^2.4.3"
+		"@sveltejs/adapter-vercel": "^2.4.3",
+		"@vercel/analytics": "^1.0.1"
 	}
 }
